--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
 /* Header
 -----------------------------------------------------------------------------*/
 .header {
-	height: 150px;
+	height: 64px;
 	background: #FFE680;
 }
 
@@ -69,7 +69,15 @@ body {
 .content {
 }
 
-
+#blackOverlay{
+    height: 1080px;
+    width: 1920px;
+    position: absolute;
+    top: 64px;
+    z-index: 1;
+    background: #000;
+    opacity: 0.7;
+}
 
 
 /* Footer
