--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -73,7 +72,16 @@ video {
     height: auto;
     z-index: -1;
 }
-
+#logoWhite{
+    display: none;
+}
+@media only screen and (min-device-width : 768px){
+    #logoWhite{
+        display: block;
+        position: absolute;
+        top: 100px;
+    }
+}
 
 
 /* Footer
