--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,187 @@
 /* Eric Meyer's CSS Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /* End of Eric Meyer's CSS Reset */
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
 }
 body {
-	font: 12px/18px Arial, sans-serif;
+  font: 12px/18px Arial, sans-serif;
 }
 .wrapper {
-	width: 100%;
-	min-width: 1000px;
+  width: 100%;
+  min-width: 1000px;
 }
-
 
 /* Header
 -----------------------------------------------------------------------------*/
 .header {
-	height: 64px;
-	background: #FFE680;
+  height: 64px;
+  background: #ffe680;
 }
-
 
 /* Middle
 -----------------------------------------------------------------------------*/
 .content {
 }
 video {
-    width: 100%;
-    height: auto;
-    z-index: -1;
+  width: 100%;
+  height: auto;
+  z-index: -1;
 }
-#logoWhite{
-    display: none;
+#logoWhite {
+  display: none;
 }
-@media only screen and (min-device-width : 768px){
-    #logoWhite{
-        display: block;
-        position: absolute;
-        top: 100px;
-    }
+.card {
+  box-shadow: unset !important;
+  -webkit-box-shadow: unset !important;
+  border-radius: unset !important;
 }
 
+@media only screen and (min-device-width: 768px) {
+  #logoWhite {
+    display: block;
+    position: absolute;
+    top: 100px;
+  }
+}
 
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
-	height: 100px;
-	background: #BFF08E;
+  height: 100px;
+  background: #bff08e;
 }
