--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -49,10 +50,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 body {
 	font: 12px/18px Arial, sans-serif;
 }
-.wrapper {
-	width: 100%;
-	min-width: 1000px;
-}
+
 
 
 /* Header
@@ -75,11 +73,25 @@ video {
 #logoWhite{
     display: none;
 }
+#videoLogo{
+    position: absolute;
+    z-index: 2;
+    top: 64px;
+    height: 100vh;
+    width: 100%;
+
+}
 @media only screen and (min-device-width : 768px){
-    #logoWhite{
-        display: block;
-        position: absolute;
-        top: 100px;
+    .videoLogo{
+        width: 50%;
+        height: auto;
+        margin-top: 8em;
+        margin-bottom: 8em
+    }
+    #videoDiv{
+        display: flex;
+        justify-content: center;
+        text-align: center;
     }
 }
 
