--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ summary {
   display: block;
 }
 body {
-  font: 12px/18px Arial, sans-serif;
 }
 .wrapper {
   width: 100%;
@@ -157,6 +156,24 @@ body {
 -----------------------------------------------------------------------------*/
 .content {
 }
+h1 {
+  font-family: 'Cinzel', serif;
+  font-weight: 400;
+  text-align: center;
+  margin: 1em;
+  color: #fff;
+}
+p {
+  font-family: niveau-grotesk, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+}
+
+#prices_services {
+  background: #000;
+}
+
 video {
   width: 100%;
   height: auto;
@@ -171,11 +188,43 @@ video {
   border-radius: unset !important;
 }
 
-@media only screen and (min-device-width: 768px) {
+.card_border {
+  border-left: 2px solid #ffcc00 !important;
+  border-right: 2px solid #ffcc00 !important;
+  display: block;
+}
+
+.card .card-content p {
+  margin: 0;
+  text-align: center;
+  font-family: niveau-grotesk, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+}
+
+.card .card-content .card-title {
+  display: block;
+  line-height: 32px;
+  margin-bottom: 8px;
+  text-align: center;
+  font-family: niveau-grotesk, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+@media only screen and (max-width: 920px) {
   #logoWhite {
     display: block;
     position: absolute;
     top: 100px;
+  }
+  .card_border {
+    border-top: 2px solid #ffcc00 !important;
+    border-bottom: 2px solid #ffcc00 !important;
+    border-left: unset !important;
+    border-right: unset !important;
+    display: block;
   }
 }
 
