--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ body {
 .content {
 }
 h1 {
+	font-size: 3.2rem !important;
   font-family: 'Cinzel', serif;
   font-weight: 400;
   text-align: center;
@@ -184,6 +185,27 @@ video {
   }
 }
 
+#company {
+	width: 100%;
+}
+.pleaseNoPadding {
+	padding: 0 !important;
+}
+.aboutC {
+	background-color: #000;
+	margin: 0;
+	padding:0.7em;
+}
+#goodService {
+	font-family: 'Cinzel', serif;
+  font-weight: 400;
+	color: #000;
+	text-align: left;
+}
+#descr {
+	line-height: 28px;
+    margin-top: 2em;
+}
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
