Created The Grid for the Gallery Section

--- a/css/style.css
+++ b/css/style.css
@@ -234,15 +234,19 @@ video {
 
 .card.horizontal .card-image img {
     border-radius: unset !important;
-    max-width: 50% !important;
+    max-width: 80% !important;
     width: auto;
     padding: 2em;
-    margin-left: 3em;
 
 }
 
 .card.horizontal .card-image {
 		border-right: 2px solid #ffcc00;
+}
+
+
+#gallery_reviews{
+	background: #000;
 }
 
 @media only screen and (max-width: 992px) {
@@ -260,6 +264,15 @@ video {
     display: block;
   }
 }
+
+@media only screen and (max-width: 600px) {
+
+.card .card-content .card-title {
+	font-size: 20px;
+}
+
+}
+
 
 #company {
 	width: 100%;
