--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,11 @@ video {
 	background-color: #000;
 }
 
-
+#map {
+   width: 100%;
+   height: 400px;
+   background-color: grey;
+ }
 /* END Where to find us Page */
 
 
