fixing all around

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ nav {
   background-color: #ffcc00 !important;
 }
 
+.brand-logo {
+      margin-left: 2em;
+    }
 /* Middle
 -----------------------------------------------------------------------------*/
 /* =================== IGNAS =========================== */
@@ -108,7 +111,12 @@ video {
    height: 400px;
    background-color: grey;
  }
-
+#smallBtn{
+    display: none;
+}
+.btn-large{
+    display: inline-block !important;
+}
 
 /* =================== END IGNAS =========================== */
 
@@ -145,6 +153,9 @@ video {
   font-style: normal;
 }
 
+.card-content {
+    min-height: 120px;
+}
 .picture {
   max-width: 50%;
 }
@@ -198,7 +209,7 @@ video {
 	background-color: #000;
 }
 .SomeIcon{
-    display: none;
+    display: block;
     position: fixed;
     width: 40px;
     top: 50%;
@@ -206,7 +217,7 @@ video {
     right: 10px;
 }
 .SomeIcon2{
-    display: none;
+    display: block;
     position: fixed;
     width: 40px;
     top: 56%;
@@ -259,9 +270,21 @@ video {
 
 
 
+
 /* ______________________ TABLET _______________________ */
 
 @media only screen and (max-width: 992px) {
+    .SomeIcon{
+    display: none;
+    
+}
+    .swag {
+	    margin-top: 17%;
+	  }
+.SomeIcon2{
+    display: none;
+
+}
 
 	.brand-logo {
 	  margin-left: 0em;
@@ -281,24 +304,29 @@ video {
     display: block;
   }}
 
+
 /* ______________________ MOBILE _______________________ */
 
   @media only screen and (max-width: 600px) {
     .card .card-content .card-title {
       font-size: 20px;
     }
-
-    .brand-logo {
-      margin-left: 2em;
-    }
+.swag {
+	    margin-top: 1%;
+	  }
+    
 
     h2 {
       font-size: 1em !important;
     }
+      .btn-large{
+          display: none !important;
+      }
+      #smallBtn{
+          display: inline-block;
+      }
 
-		.swag {
-	    margin-top: 10%;
-	  }
+		
 
     .container_gallery {
       display: none !important;
