--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /* Header
 -----------------------------------------------------------------------------*/
 .header {}
@@ -18,28 +17,25 @@ nav {
 /* Middle
 -----------------------------------------------------------------------------*/
 /* =================== IGNAS =========================== */
-
-
-
 .videoLogo {
-	width: 50%;
-	height: auto;
-	margin-top: 12em;
-	margin-bottom: 2em;
+  width: 50%;
+  height: auto;
+  margin-top: 12em;
+  margin-bottom: 2em;
 }
 
 #videoDiv {
-	display: flex;
-	justify-content: center;
-	text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 #goodService {
-	text-align: left;
+  text-align: left;
 }
 
 .swag {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 a {
@@ -104,16 +100,13 @@ video {
 }
 
 #map {
-   width: 100%;
-   height: 400px;
-   background-color: grey;
- }
-
+  width: 100%;
+  height: 400px;
+  background-color: grey;
+}
 
 /* =================== END IGNAS =========================== */
-
 /* =================== EDDY =========================== */
-
 .card {
   box-shadow: unset !important;
   -webkit-box-shadow: unset !important;
@@ -191,92 +184,96 @@ video {
 }
 
 .swiper-container {
-	display: none;
+  display: none;
 }
 
 #findUs {
-	background-color: #000;
+  background-color: #000;
 }
-.SomeIcon{
-    display: none;
-    position: fixed;
-    width: 40px;
-    top: 50%;
-    z-index: 10;
-    right: 10px;
+
+.SomeIcon {
+  display: none;
+  position: fixed;
+  width: 40px;
+  top: 50%;
+  z-index: 10;
+  right: 10px;
 }
-.SomeIcon2{
-    display: none;
-    position: fixed;
-    width: 40px;
-    top: 56%;
-    z-index: 10;
-    right: 10px;
+
+.SomeIcon2 {
+  display: none;
+  position: fixed;
+  width: 40px;
+  top: 56%;
+  z-index: 10;
+  right: 10px;
 }
 
 #company {
-	width: 100%;
+  width: 100%;
 }
 
 .pleaseNoPadding {
-	padding: 0 !important;
+  padding: 0 !important;
 }
 
 .aboutC {
-	background-color: #000;
-	margin: 0;
-	padding: 0.7em;
+  background-color: #000;
+  margin: 0;
+  padding: 0.7em;
 }
 
 #goodService {
-	font-family: 'Cinzel', serif;
-	font-weight: 400;
-	color: #000;
-	text-align: left;
-	font-size: 1.5em;
+  font-family: 'Cinzel', serif;
+  font-weight: 400;
+  color: #000;
+  text-align: left;
+  font-size: 1.5em;
 }
 
 #descr {
-	line-height: 28px;
-	margin-top: 2em;
+  line-height: 28px;
+  margin-top: 2em;
 }
 
 #contactUs {
-	color: #ffcc00 !important;
-	font-size: 20px;
-	font-weight: bold;
+  color: #ffcc00 !important;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 #contactUs:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* END About Company Page */
 /* Where to find us Page */
 #findUs {
-	background-color: #000;
+  background-color: #000;
 }
 
-#about_hairdressers{
-	background: #000;
+#about_hairdressers {
+  background: #000;
 }
 
-h5{
-	font-family: niveau-grotesk, sans-serif;
+h5 {
+  font-family: niveau-grotesk, sans-serif;
   font-weight: 700;
   font-style: normal;
-	color: #ffcc00;
-	text-align: center;
-	text-transform: uppercase;
+  color: #ffcc00;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.hairdresser_desktop {
+  display: block;
 }
 
 /* ______________________ TABLET _______________________ */
-
 @media only screen and (max-width: 992px) {
-
-	.brand-logo {
-	  margin-left: 0em;
-	}
+  .brand-logo {
+    margin-left: 0em;
+  }
 
   #logoWhite {
     display: block;
@@ -290,80 +287,128 @@ h5{
     border-left: unset !important;
     border-right: unset !important;
     display: block;
-  }}
+  }
+}
 
 /* ______________________ MOBILE _______________________ */
+@media only screen and (max-width: 600px) {
+  .card .card-content .card-title {
+    font-size: 20px;
+  }
 
-  @media only screen and (max-width: 600px) {
-    .card .card-content .card-title {
-      font-size: 20px;
-    }
+  .brand-logo {
+    margin-left: 2em;
+  }
 
-    .brand-logo {
-      margin-left: 2em;
-    }
+  h2 {
+    font-size: 1em !important;
+  }
 
-    h2 {
-      font-size: 1em !important;
-    }
+  .swag {
+    margin-top: 10%;
+  }
 
-		.swag {
-	    margin-top: 10%;
-	  }
+  .container_gallery {
+    display: none !important;
+  }
 
-    .container_gallery {
-      display: none !important;
-    }
+  .swiper-container {
+    display: block;
+  }
 
-    .swiper-container {
-      display: block;
-    }
+  .swiper-slide {
+    background-size: cover;
+    box-sizing: border-box;
+    padding: 15em 3em;
+    color: white;
+		text-align: center;
+  }
 
-    .swiper-slide {
-      background-size: cover;
-      box-sizing: border-box;
-      padding: 20em 3em;
-      color: white;
-    }
+  .slide1 {
+    background: url('../img/gallery1.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide1 {
-      background: url('../img/gallery1.jpg')
-    }
+  .slide2 {
+    background: url('../img/gallery2.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide2 {
-      background: url('../img/gallery2.jpg')
-    }
+  .slide3 {
+    background: url('../img/gallery3.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide3 {
-      background: url('../img/gallery3.jpg')
-    }
+  .slide4 {
+    background: url('../img/gallery4.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide4 {
-      background: url('../img/gallery4.jpg')
-    }
+  .slide5 {
+    background: url('../img/gallery5.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
+  .slide6 {
+    background: url('../img/gallery6.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide5 {
-      background: url('../img/gallery5.jpg')
-    }
+  .slide7 {
+    background: url('../img/gallery7.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide6 {
-      background: url('../img/gallery6.jpg')
-    }
+  .slide8 {
+    background: url('../img/gallery8.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-    .slide7 {
-      background: url('../img/gallery7.jpg')
-    }
+  .hairdresser_desktop {
+    display: none;
+  }
 
-    .slide8 {
-      background: url('../img/gallery8.jpg')
-    }}
+  .slide9 {
+    background: url('../img/thaer.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
+  .slide10 {
+    background: url('../img/montazer.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
 
-  /* END Where to find us Page */
+  .slide11 {
+    background: url('../img/murad.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+  }
+	
+}
 
-
-  /* Footer
+/* END Where to find us Page */
+/* Footer
 
 		#goodService {
 			text-align: left;
@@ -374,7 +419,7 @@ h5{
 }
 /* Footer
 -----------------------------------------------------------------------------*/
-  .footer {
-    height: 100px;
-    background: #bff08e;
-  }
+.footer {
+  height: 100px;
+  background: #bff08e;
+}
