--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ nav {
 	text-align: left;
 }
 
-.swag {
+.textMargin {
 	margin-top: 0;
 }
 
@@ -102,7 +102,7 @@ video {
   display: none;
 }
 
-.swag {
+.textMargin {
   text-align: center;
 }
 
@@ -289,7 +289,7 @@ h5{
     display: none;
     
 }
-    .swag {
+    .textMargin {
 	    margin-top: 17%;
 	  }
 .SomeIcon2{
@@ -322,7 +322,7 @@ h5{
     .card .card-content .card-title {
       font-size: 20px;
     }
-.swag {
+.textMargin {
 	    margin-top: 1%;
 	  }
     
