--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,22 @@ video {
     z-index: 10;
     right: 10px;
 }
+.SomeIconM1{
+    display: none;
+    position: fixed;
+    left: 5px;
+    width: 30px;
+    z-index: 10;
+    top: 12px;
+}
+.SomeIconM2{
+    display: none;
+    position: fixed;
+    left: 40px;
+    width: 30px;
+    z-index: 10;
+    top: 12px;
+}
 
 #company {
   width: 100%;
@@ -296,6 +312,9 @@ h5 {
     display: none;
 
 }
+    .SomeIconM1, .SomeIconM2{
+        display: block;
+    }
 
 	.brand-logo {
 	  margin-left: 0em;
