--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ video {
 .SomeIcon{
     display: block;
     position: fixed;
-    width: 3%;
+    width: 40px;
     top: 50%;
     z-index: 10;
     right: 10px;
