--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ video {
 .btn-large{
     display: inline-block !important;
 }
+.mobileText{
+    background-color:rgba(0,0,0,0.6);
+    z-index: 10;
+}
 
 /* =================== END IGNAS =========================== */
 /* =================== EDDY =========================== */
@@ -145,6 +149,7 @@ video {
   font-family: niveau-grotesk, sans-serif;
   font-weight: 700;
   font-style: normal;
+    font-size: 27px;
 }
 
 .card-content {
@@ -305,6 +310,9 @@ h5 {
     display: none;
 
 }
+    #company {
+  width: 100vw;
+}
     .textMargin {
 	    margin-top: 17%;
 	  }
@@ -333,6 +341,7 @@ h5 {
     border-right: unset !important;
     display: block;
   }
+    
 }
 
 
@@ -371,7 +380,7 @@ h5 {
   .swiper-slide {
     background-size: cover;
     box-sizing: border-box;
-    padding: 15em 3em;
+    padding: 25em 0em 0em 0em;
     color: white;
 		text-align: center;
   }
