--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,9 @@ nav {
 }
 
 .brand-logo {
-      margin-left: 2em;
-    }
+  margin-left: 2em;
+}
+
 /* Middle
 -----------------------------------------------------------------------------*/
 /* =================== IGNAS =========================== */
@@ -38,7 +39,7 @@ nav {
 }
 
 .textMargin {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 a {
@@ -103,19 +104,22 @@ video {
 }
 
 #map {
-   width: 100%;
-   height: 400px;
-   background-color: grey;
- }
-#smallBtn{
-    display: none;
+  width: 100%;
+  height: 400px;
+  background-color: grey;
 }
-.btn-large{
-    display: inline-block !important;
+
+#smallBtn {
+  display: none;
 }
-.mobileText{
-    background-color:rgba(0,0,0,0.6);
-    z-index: 10;
+
+.btn-large {
+  display: inline-block !important;
+}
+
+.mobileText {
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
 }
 
 /* =================== END IGNAS =========================== */
@@ -149,12 +153,13 @@ video {
   font-family: niveau-grotesk, sans-serif;
   font-weight: 700;
   font-style: normal;
-    font-size: 27px;
+  font-size: 27px;
 }
 
 .card-content {
-    min-height: 120px;
+  min-height: 120px;
 }
+
 .picture {
   max-width: 50%;
 }
@@ -205,10 +210,10 @@ video {
 }
 
 /* Reviews */
-
 .cardsForm {
   overflow-y: scroll;
   width: 480px !important;
+  height: 492px !important
 }
 
 .review-person {
@@ -254,42 +259,49 @@ video {
   margin-top: 4% !important
 }
 
-/* REVIEWS ends */
+.mob-review {
+  display: none
+}
 
+/* REVIEWS ends */
 #findUs {
   background-color: #000;
 }
-.SomeIcon{
-    display: block;
-    position: fixed;
-    width: 40px;
-    top: 50%;
-    z-index: 10;
-    right: 10px;
+
+.SomeIcon {
+  display: block;
+  position: fixed;
+  width: 40px;
+  top: 50%;
+  z-index: 10;
+  right: 10px;
 }
-.SomeIcon2{
-    display: block;
-    position: fixed;
-    width: 40px;
-    top: 56%;
-    z-index: 10;
-    right: 10px;
+
+.SomeIcon2 {
+  display: block;
+  position: fixed;
+  width: 40px;
+  top: 56%;
+  z-index: 10;
+  right: 10px;
 }
-.SomeIconM1{
-    display: none;
-    position: fixed;
-    left: 5px;
-    width: 30px;
-    z-index: 10;
-    top: 12px;
+
+.SomeIconM1 {
+  display: none;
+  position: fixed;
+  left: 5px;
+  width: 30px;
+  z-index: 10;
+  top: 12px;
 }
-.SomeIconM2{
-    display: none;
-    position: fixed;
-    left: 40px;
-    width: 30px;
-    z-index: 10;
-    top: 12px;
+
+.SomeIconM2 {
+  display: none;
+  position: fixed;
+  left: 40px;
+  width: 30px;
+  z-index: 10;
+  top: 12px;
 }
 
 #company {
@@ -301,7 +313,7 @@ video {
 }
 
 .image-smaller {
-	max-width: 50%;
+  max-width: 50%;
 }
 
 .aboutC {
@@ -361,7 +373,6 @@ footer {
   margin-top: 2%;
   background-color: black;
   color: white;
-  height: 235px
 }
 
 h2 {
@@ -406,27 +417,29 @@ h2 {
 
 /* ______________________ TABLET _______________________ */
 @media only screen and (max-width: 992px) {
-    .SomeIcon{
+  .SomeIcon {
     display: none;
+  }
 
-}
-    #company {
-  width: 100vw;
-}
-    .textMargin {
-	    margin-top: 17%;
-	  }
-.SomeIcon2{
+  #company {
+    width: 100vw;
+  }
+
+  .textMargin {
+    margin-top: 17%;
+  }
+
+  .SomeIcon2 {
     display: none;
+  }
 
-}
-    .SomeIconM1, .SomeIconM2{
-        display: block;
-    }
+  .SomeIconM1, .SomeIconM2 {
+    display: block;
+  }
 
-	.brand-logo {
-	  margin-left: 0em;
-	}
+  .brand-logo {
+    margin-left: 0em;
+  }
 
   #logoWhite {
     display: block;
@@ -441,33 +454,53 @@ h2 {
     border-right: unset !important;
     display: block;
   }
-
 }
 
-
 /* ______________________ MOBILE _______________________ */
+@media only screen and (max-width: 600px) {
+  .card .card-content .card-title {
+    font-size: 20px;
+  }
 
+  .mob-review {
+    display: block
+  }
 
-  @media only screen and (max-width: 600px) {
-    .card .card-content .card-title {
-      font-size: 20px;
-    }
-.textMargin {
-	    margin-top: 1%;
-	  }
+  .cardsForm {
+    width: auto !important;
+    height: 180px !important;
+    margin-right: 2% !important;
+    margin-left: 2% !important;
+  }
 
+  .fields2 {
+    height: 100px !important;
+    margin-right: 2% !important;
+    margin-left: 2% !important;
+    width: 300px !important
+  }
 
-    h2 {
-      font-size: 1em !important;
-    }
-      .btn-large{
-          display: none !important;
-      }
-      #smallBtn{
-          display: inline-block;
-      }
+  .fields {
+    margin-right: 2% !important;
+    margin-left: 2% !important;
+    width: 300px !important
+  }
 
+  .textMargin {
+    margin-top: 1%;
+  }
 
+  h2 {
+    font-size: 1em !important;
+  }
+
+  .btn-large {
+    display: none !important;
+  }
+
+  #smallBtn {
+    display: inline-block;
+  }
 
   .container_gallery {
     display: none !important;
@@ -482,63 +515,63 @@ h2 {
     box-sizing: border-box;
     padding: 25em 0em 0em 0em;
     color: white;
-		text-align: center;
+    text-align: center;
   }
 
   .slide1 {
     background: url('../img/gallery1.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide2 {
     background: url('../img/gallery2.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide3 {
     background: url('../img/gallery3.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide4 {
     background: url('../img/gallery4.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide5 {
     background: url('../img/gallery5.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide6 {
     background: url('../img/gallery6.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide7 {
     background: url('../img/gallery7.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide8 {
     background: url('../img/gallery8.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .hairdresser_desktop {
@@ -554,18 +587,46 @@ h2 {
 
   .slide10 {
     background: url('../img/montazer.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .slide11 {
     background: url('../img/murad.jpg');
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
+  .column {
+    float: none;
+    width: 100%;
+    border-right: none;
+    height: 90px;
+    margin-top: 2%;
+    text-align: center;
+    padding: 10px
+  }
+
+  .paragraph {
+    margin-bottom: 0;
+    margin-top: 0;
+    font-size: 10pt;
+    letter-spacing: 2px;
+    text-align: center;
+  }
+
+  .heading2 {
+    margin: 0 !important;
+    font-size: 14pt !important;
+    margin-top: 2% !important;
+  }
+
+  .copy {
+    font-size: 8pt;
+    margin-top: 40px
+  }
 }
 
 /* END Where to find us Page */
@@ -577,10 +638,4 @@ h2 {
     .SomeIcon, .SomeIcon2{
         display: block;
     }
-}
-/* Footer
------------------------------------------------------------------------------*/
-.footer {
-  height: 100px;
-  background: #bff08e;
 }
