--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth !important;
+}
+
 /* Header
 -----------------------------------------------------------------------------*/
 .header {}
